# generate_packer

./: .gitignore  README.md  generate_packer - Copy.py.bkp  generate_packer.py  generate_packer_native_fixed.py.old  generator_packer.pkr.hcl  pyproject.toml  requirements.txt  test-fixed.pkr.hcl.old  test_script.bat
.github/workflows/: ci.yml  release.yml
files/: user-data  windows-user-data
templates/configuration/rocky97/: vars.json
templates/configuration/rocky98/: vars.json
templates/configuration/win2022/: vars.json
