[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "generate-packer"
version = "0.1.0"
description = "Packer HCL Generator for Platform9 Private Cloud OpenStack"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "openstacksdk>=1.0.0",
    "requests>=2.28.0",
    "PyYAML>=6.0",
]

[project.scripts]
generate-packer = "generate_packer:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "packer-sdk",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["generate_packer*"]

[tool.ruff]
line-length = 88
target-version = 'py38'

